<resources>
    <string name="app_name">careconnect</string>
    <string name="user_name">Nombre</string>
    <string name="bienvenido">Bienvenido a CareConnect</string>
    <string name="log_in">Log In</string>
    <string name="Join">Join</string>
    <string name="sign_up">Sign Up</string>
    <string name="profesional">Profesional de la salud</string>
    <string name="paciente">Paciente</string>
    <string name="email">Correo Electrónico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="Confcontrase_a">Confirmar Contraseña</string>
    <string name="careconnect">CareConnect</string>
    <string name="TvhaveAccount">¿Tienes una cuenta?</string>
    <string name="TvredirLog_in">Log in</string>
    <string name="no_cuenta">¿No tienes una cuenta?</string>
    <string name="sacar_cita">Sacar Cita</string>
    <string name="SacarCita">TODO</string>
    <string name="HistorialMedico">TODO</string>
    <string name="btSacarCita">Button</string>
    <string name="que_necesitas">¿Qué necesitas?</string>
    <string name="ajustes">Ajustes</string>
    <string name="perfil">Perfil</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="inicio">Inicio</string>
    <string name="bienvenidotv">Bienvenido</string>
    <string name="icono_menu">TODO</string>
    <string name="menu">Menú</string>
    <string name="leer">Leer</string>
    <string name="ingresos_pagos">Ingresos y Pagos</string>
    <string name="leerInfo">Leer</string>
    <string name="editarinfo">Revisa o edita tu descripción personal</string>
    <string name="Titulo">Perfil</string>
    <string name="NombreEjemplo">Camilo Alberto Cortés Montejo</string>
    <string name="fechaEjemplo">01 / 01 / 1946</string>
    <string name="numeroEjemplo">989 710 635</string>
    <string name="historialMedico">Historial Médico</string>
    <string name="HMedicoInfo">Revisa tu historial médico</string>
    <string name="informacionPersonal">Información Personal</string>
    <string name="restablecerContraseña">Restablecer contraseña</string>
    <string name="cerrarSesion">Cerrar sesión</string>
    <string name="photo">TODO</string>
    <string name="imgRestablecerContra">TODO</string>
    <string name="tvfechapacientehistorial">tvFechaPacienteHistorial</string>
    <string name="actualizar_informacion_historial">Actualizar Información</string>
    <string name="aviso_historial">El historial medico aun no se ha ingresado a la plataforma</string>
    <string name="adjuntar_historial">Adjuntar Historial</string>
    <string name="tvnombrepaciente">tvNombrePaciente</string>
    <string name="guardarHistorialResumen">Guardar</string>
    <string name="alergiasSrcImage">Alergias</string>
    <string name="antecedentesSrcImage">Antecedentes</string>
    <string name="alturaHistorial">Altura:</string>
    <string name="alturaHistorialResumen">1.72 m</string>
    <string name="masaCorporalHistorialResumen">55 Kg</string>
    <string name="masaCorporalHistorial">Masa Corporal:</string>
    <string name="pesoHistorialResumen">55 Kg</string>
    <string name="pesoHistorial">Peso:</string>
    <string name="infogeneralSrcImage">InfoGeneral</string>
    <string name="photoHistorialSrcImage">Photo</string>
    <string name="settingsSrcImage">Settings</string>
    <string name="seleccione_la_fecha">Seleccione la fecha</string>
    <string name="seleccione_el_horario">Seleccione el horario</string>
    <string name="siguiente">Siguiente</string>
    <string name="cita">Cita</string>
    <string name="confirmar">Confirmar</string>
    <string name="precio">S/ 75.00 PEN</string>
    <string name="monto_total">Monto total</string>
    <string name="ej_rodolfo_rivera">Ej. Rodolfo Rivera</string>
    <string name="tus_datos_de_pago">Tus datos de pago</string>
    <string name="titular_de_la_tarjeta">Titular de la tarjeta</string>
    <string name="n_mero_de_la_tarjeta">Número de la tarjeta</string>
    <string name="fecha_de_vencimiento">Fecha de vencimiento</string>
    <string name="cvv">CVV</string>
    <string name="terminosCondiciones">Bienvenido a CareConnect. Al descargar, instalar y usar nuestra aplicación móvil, usted acepta cumplir y estar sujeto a los siguientes términos y condiciones de uso. Estos términos, junto con nuestra política de privacidad, rigen la relación entre CareConnect y usted en relación con esta aplicación.\n\n 1. Descripción del Servicio\nCareConnect es una plataforma que facilita la conexión entre pacientes y profesionales de la salud para la programación de citas a domicilio. Los usuarios pueden seleccionar al profesional de su preferencia, gestionar el pago y coordinar el día y la hora de la cita a través de la aplicación.\n\n 2. Registro y Cuenta del Usuario\nPara utilizar CareConnect, debe registrarse y crear una cuenta. Usted es responsable de mantener la confidencialidad de su cuenta y contraseña, y de restringir el acceso a su dispositivo. Usted acepta la responsabilidad de todas las actividades que ocurran bajo su cuenta.\n\n 3. Uso del Servicio\nEl uso de CareConnect está destinado exclusivamente para fines personales y no comerciales. Usted acepta no utilizar la aplicación para ningún propósito ilegal o prohibido por estos términos y condiciones. Usted es responsable de proporcionar información precisa, completa y actualizada durante el registro y el uso de la aplicación.\n\n 4. Pagos y Cargos\nTodos los pagos por los servicios proporcionados a través de CareConnect deben realizarse mediante los métodos de pago disponibles en la aplicación.\n\n 5. Relación Profesional-Paciente\nCareConnect actúa como una plataforma de intermediación y no proporciona directamente servicios médicos. La relación profesional-paciente se establece directamente entre el usuario y el profesional de la salud. CareConnect no asume responsabilidad alguna por el tratamiento o servicios proporcionados por los profesionales de la salud.\n\n 6. Modificaciones de los Términos y Condiciones\nCareConnect se reserva el derecho de modificar estos términos y condiciones en cualquier momento. Los cambios entrarán en vigor inmediatamente después de su publicación en la aplicación. Su uso continuado de CareConnect después de la publicación de cualquier cambio constituirá su aceptación de dichos cambios.</string>
    <string name="acetparTerminos">Acepto los términos y condiciones</string>
    <string name="tituloTerminos">Términos y Condiciones</string>
</resources>